# ENSTA-OS-202

./: .gitignore  README.md  lscpu.txt
Examen/: lscpu.txt
Examen/ex_1/: 1_mpi_original_time.csv  2_mpi_original_time.csv  3_mpi_original_time.csv  4_mpi_original_time.csv  README.md  ex1_speedup_plot.py  mpi_movie_filter.py  original_time.csv
Examen/ex_2/: README.md  double_size_mpi.py
projet/: .gitignore  ANOTACOES.md  CMakeLists.txt  Etape_1.md  README.md  csv_plot.py  execution_times.txt  profiler.hpp  requirements.txt  run_simulation.sh  simulation.cpp  speedup_plot.py
projet/src/: .gitignore  CMakeLists.txt  Makefile  anotacoes.md  csv_plot.py  display.cpp  logs.txt  measures.cpp  model.cpp  model.hpp  plot_speedup.py  run_1.sh  run_testes.sh  simulation.cpp  speedup_plot.py
projet/src/logs/: 17-05-58-09-03-2025.csv  center_singlethread.csv  origin_singlethread.csv
projet/src/logs_700_pc_de_casa_schedule_dynamic_32/: 14-29-02-11-03-2025.csv  14-30-21-11-03-2025.csv  14-31-36-11-03-2025.csv  14-32-43-11-03-2025.csv  14-33-51-11-03-2025.csv  14-35-01-11-03-2025.csv
projet/src/logs_700_pc_de_casa_sem_schedule/: 15-43-36-11-03-2025.csv  15-44-55-11-03-2025.csv  15-46-18-11-03-2025.csv  15-47-41-11-03-2025.csv  15-48-59-11-03-2025.csv  15-50-16-11-03-2025.csv  15-51-33-11-03-2025.csv  15-52-48-11-03-2025.csv  15-54-03-11-03-2025.csv  15-55-19-11-03-2025.csv  15-56-32-11-03-2025.csv  15-57-47-11-03-2025.csv
tp1/: README.md  Sujet.aux  Sujet.fdb_latexmk  Sujet.fls  Sujet.out  Sujet.tex  Sujet.toc  view_parallel_1.py
tp2/: Readme.md  print_mandelbrot.py
(+683 files in other folders)
